; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_get_unit_by_control_group.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_get_unit_by_control_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@BUS_ERROR_NO_SUCH_UNIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [64 x i8] c"Control group '%s' is not valid or not managed by this instance\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @method_get_unit_by_control_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_get_unit_by_control_group(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @sd_bus_message_read(i32* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %9)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %11, align 4
  store i32 %19, i32* %4, align 4
  br label %36

20:                                               ; preds = %3
  %21 = load i32*, i32** %8, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = call i32* @manager_get_unit_by_cgroup(i32* %21, i8* %22)
  store i32* %23, i32** %10, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %31, label %26

26:                                               ; preds = %20
  %27 = load i32*, i32** %7, align 8
  %28 = load i32, i32* @BUS_ERROR_NO_SUCH_UNIT, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = call i32 @sd_bus_error_setf(i32* %27, i32 %28, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.1, i64 0, i64 0), i8* %29)
  store i32 %30, i32* %4, align 4
  br label %36

31:                                               ; preds = %20
  %32 = load i32*, i32** %10, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** %7, align 8
  %35 = call i32 @reply_unit_path(i32* %32, i32* %33, i32* %34)
  store i32 %35, i32* %4, align 4
  br label %36

36:                                               ; preds = %31, %26, %18
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32* @manager_get_unit_by_cgroup(i32*, i8*) #1

declare dso_local i32 @sd_bus_error_setf(i32*, i32, i8*, i8*) #1

declare dso_local i32 @reply_unit_path(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
